--- a/fifteen.css
+++ b/fifteen.css
@@ -10,7 +10,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
-  background-color: #f0f0f0;
+  background-color: gray;
 }
 
 #puzzle_container {
@@ -24,8 +24,8 @@ body {
   width: 100px;
   height: 100px;
   border: 2px solid black;
-  background-image: url("background.jpg");
-  color: #faeded;
+  background-size: 400px 400px;
+  color: black;
   font-size: 32px;
   font-weight: bold;
   text-align: center;
